--- a/albionboxes/dev_light_strip.yaml
+++ b/albionboxes/dev_light_strip.yaml
@@ -10,7 +10,8 @@ substitutions:
   light_strip_icon: "mdi:led-strip-variant"
 #  light_strip_data_pin: "22"
   light_strip_data_pin: "26"
-  light_strip_num_leds: "70"
+#  light_strip_num_leds: "70"
+  light_strip_num_leds: "16"
 
 packages:
   esphome: !include common/default_esphome.yaml
