--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,12 @@ aioesphomeapi==24.3.0
 aiohappyeyeballs==2.3.2
 ajsonrpc==1.2.0
 anyio==4.4.0
-argcomplete==3.3.0
-async-interrupt==1.1.1
+argcomplete==3.4.0
+async_interrupt==1.1.2
 bitarray==2.9.2
 bitstring==4.2.3
 bottle==0.12.25
-cairocffi==1.7.0
+cairocffi==1.7.1
 CairoSVG==2.7.1
 certifi==2024.6.2
 cffi==1.16.0
@@ -20,8 +20,8 @@ cryptography==42.0.2
 cssselect2==0.7.0
 defusedxml==0.7.1
 ecdsa==0.19.0
-esphome==2024.5.5
-esphome-dashboard==20240412.0
+esphome==2024.6.6
+esphome-dashboard==20240620.0
 esptool==4.7.0
 h11==0.14.0
 icmplib==3.0.4
@@ -35,7 +35,7 @@ packaging==24.1
 paho-mqtt==1.6.1
 pillow==10.3.0
 platformio==6.1.15
-protobuf==5.27.1
+protobuf==5.27.2
 pycparser==2.22
 pyelftools==0.31
 pyparsing==3.1.2
@@ -55,7 +55,7 @@ tinycss2==1.3.0
 tornado==6.4
 tzdata==2024.1
 tzlocal==5.2
-urllib3==2.2.1
+urllib3==2.2.2
 uvicorn==0.29.0
 voluptuous==0.14.2
 webencodings==0.5.1
